--- a/HRate/appsettings.json
+++ b/HRate/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "HRateContext": "Server=(localdb)\\mssqllocaldb;Database=HRateContext-87d9c4ad-44a8-4adc-af3f-632ce9adbb8f;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
